--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "use-tauri",
-  "type": "module",
+  "name": "@use-tauri/monorepo",
   "version": "0.0.1",
+  "private": true,
   "packageManager": "pnpm@8.6.0",
   "description": "",
   "author": "MuRong <hi@mrong.me>",
@@ -39,7 +39,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "rollup -c",
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -49,10 +49,16 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
+  "dependencies": {
+    "esbuild-register": "^3.4.2"
+  },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
     "@antfu/utils": "^0.7.4",
     "@murongg/eslint-config": "^0.2.0",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/node": "^18.16.16",
     "bumpp": "^9.1.0",
     "eslint": "^8.41.0",
@@ -60,9 +66,11 @@
     "lint-staged": "^13.2.2",
     "pnpm": "^8.6.0",
     "rimraf": "^5.0.1",
+    "rollup": "^3.27.2",
+    "rollup-plugin-dts": "^5.3.1",
+    "rollup-plugin-esbuild": "^5.0.0",
     "simple-git-hooks": "^2.8.1",
     "typescript": "^5.0.4",
-    "unbuild": "^1.2.1",
     "vite": "^4.3.9",
     "vitest": "^0.31.3"
   },
