--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,26 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "esnext",
-    "lib": ["esnext"],
+    "lib": [
+      "esnext"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
     "strictNullChecks": true,
     "resolveJsonModule": true,
+    "rootDir": ".",
+    "baseUrl": ".",
+    "jsx": "preserve",
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "paths": {
+      "@use-tauri/core": [
+        "./packages/core/index.ts"
+      ],
+      "@use-tauri/shared": [
+        "./packages/shared/index.ts"
+      ]
+    }
   }
 }
